--- a/2_state_of_the_art/0_index.tex
+++ b/2_state_of_the_art/0_index.tex
@@ -357,7 +357,7 @@ Una vez descritos los instrumentos de evaluación pasamos a definir los diferent
 
 \begin{itemize}
 \item ABP apoyado en herramientas informáticas: trabajos que implementan una metodología de \emph{aprendizaje basado en problemas} (ABP o, del inglés, PBL, problem-based learning) para desarrollar competencias específicas y genéricas en sus estudiantes y que después se evalúan mediante autoevaluación y evaluación entre iguales. En \cite{lasa2013problem} los profesores llevaron a cabo la evaluación del 90\% de las competencias utilizando la herramienta de rúbricas \emph{RubiStar}, mientras que los estudiantes mediante autoevaluación y evaluación entre iguales se encargaron del otro 10\%. 
-\item Trabajo en herramientas del EVA:  tras haber trabajado los estudiantes en actividades de un EVA se realizan procesos de autoevaluación y evaluación entre iguales para medir su desempeño en diferentes competencias genéricas. Las herramientas que suelen utilizarse son wikis, foros, actividades y e-portfolio. Esta última aparece en varios trabajos, un e-portfolio (del inglés \emph{electronic portfolio}), consiste en un conjunto de documentos, generalmente textos, archivos e imágenes, gestionados en un entorno web por un usuario. Se han recopilado trabajos donde los estudiantes trabajan con esta herramienta durante el curso y al final autoevalúan el desempeño de alguna competencia genérica\cite{arno2011promoting,starcic2008sustaining}.
+\item Trabajo en herramientas del EVA:  tras haber trabajado los estudiantes en actividades de un EVA se realizan procesos de autoevaluación y evaluación entre iguales para medir su desempeño en diferentes competencias genéricas. Los profesores confirman que el uso de herramientas web mejora la participación en la comunidad favoreciendo la colaboración y la construcción conocimiento compartido~\cite{starcic2008sustaining}. Las herramientas que suelen utilizarse son wikis, foros, actividades y e-portfolio. Esta última aparece en varios trabajos, un e-portfolio (del inglés \emph{electronic portfolio}), consiste en un conjunto de documentos, generalmente textos, archivos e imágenes, gestionados en un entorno web por un usuario. Se han recopilado trabajos donde los estudiantes trabajan con esta herramienta durante el curso y al final autoevalúan el desempeño de alguna competencia genérica\cite{arno2011promoting}. 
 \item ABE apoyado en herramientas informáticas: los estudiantes realizan una experiencia de \emph{aprendizaje basado en equipos} (ABE o, del inglés, TBL, Team Based Learning) utilizando algún tipo de herramienta colaborativa. En~\cite{ficapal2015learning} se presenta un modelo que persigue el aprendizaje basado en equipos para la adquisición y evaluación de competencias genéricas en un contexto de e-learning. Los estudiantes trabajaban en grupo y evaluaban su desempeño en el \emph{trabajo en equipo} mediante una rúbrica. La calificación se completó con un cuestionario.
 \item Trabajo con herramienta empresarial: herramientas ligadas al ámbito empresarial (contabilidad, gestión de equipos, gestión de proyectos, ... etc.) acompañadas de rúbricas de autoevaluación.  En~\cite{chang2009international} se utiliza la herramienta Cycloid para el desarrollo de competencias en la gestión de proyectos y posteriormente se llevan a cabo autoevaluaciones de los propios estudiantes para valorar la adquisición de dichas competencias. También se autoevalúan competencias \emph{empresariales} en  \cite{achcaoucaou2014competence} mediante el uso de Tricuspoid. 
 \item Videoconferencias: los estudiantes realizan videoconferencias con herramientas como Skype o Hangouts y después son autoevaluados o evaluados por sus compañeros en la competencia o competencias que debería desempeñar en la videoconferencia~ \cite{masip2013self,ward2011developing}.
@@ -371,7 +371,7 @@ Una vez descritos los instrumentos de evaluación pasamos a definir los diferent
 Una vez revisados todos los artículos, se han extraído unas características comunes a la tipología de los trabajos. 
 
 % REPASAR ESTE PÁRRAFO
-De los trabajos seleccionados, sólo dos mencionan un enfoque como el que se propone en la introducción de este capítulo, es decir, aprovechando los registros de interacción de los estudiantes con el LMS como indicadores del desempeño de las competencias genéricas. Encontramos trabajos que se apoyan en la tecnología para el tratamiento o evaluación de las competencias, pero que terminan delegando parte de esta evaluación en el alumnado, ya sea mediante autoevaluación o evaluación entre iguales. Otros trabajos se basan en videojuegos o en las redes sociales para evaluar alguna competencia, mientras que otros desarrollan algún tipo de software o técnica. Finalmente hay algunos trabajos que simplemente detectan en su entorno la necesidad de la evaluación de las competencias de manera automática porque su forma de hacerlo les ocasiona una serie de problemas o desventajas con respecto a otro método que proponen o demandan. Algunos trabajos utilizan más de un método simultáneamente. En la tabla \ref{tab:PublicacionesForum} se puede ver la distribución de las publicaciones. Además, nos encontramos con una revisión de la literatura sobre las competencias genéricas más evaluadas. Dicha revisión se utilizará para contrastar los datos sobre esas competencias con los obtenidos en este mapeado para responder a la primera pregunta de investigación. %, apoyadas gráficamente en la figura  \ref{fig:PublicacionesForum}.
+De los trabajos seleccionados, son 5 los que proponen la evaluación automática de competencias genéricas. De éstos, sólo dos mencionan un enfoque como el que se propone en la introducción de este capítulo, es decir, aprovechando los registros de interacción de los estudiantes con el LMS como indicadores del desempeño de las competencias genéricas. Encontramos trabajos que se apoyan en la tecnología para el tratamiento o evaluación de las competencias, pero recae en el usuario la evaluación, ya sea mediante autoevaluación o evaluación entre iguales si son los estudiantes los que se encargan de esa evaluación, mediante evaluaciones realizadas directamente por el profesor o mediante ambos enfoques. En concreto, de los 13 trabajos seleccionados que aplican evaluación entre iguales o autoevaluación, 4 aplican también evaluación del profesor. En la tabla \ref{tab:PublicacionesForum} se puede ver la distribución de las publicaciones. Además, nos encontramos con una revisión de la literatura sobre las competencias genéricas más evaluadas. Dicha revisión se utilizará para contrastar los datos sobre esas competencias con los obtenidos en este mapeado para responder a la primera pregunta de investigación. %, apoyadas gráficamente en la figura  \ref{fig:PublicacionesForum}.
 
 \begin{table}
   \begin{center}
@@ -382,11 +382,11 @@ De los trabajos seleccionados, sólo dos mencionan un enfoque como el que se pro
     \hline 
     Evaluación entre iguales y autoevaluación & 13\\
     \hline
-    Evaluación del profesor & 10\\
+    Evaluación del profesor & 11\\
     \hline
     Herramientas de evaluación automática & 5\\
     \hline
-    Revisiones de la literatura & 2\\
+    Revisiones de la literatura & 1\\
     \hline
   \end{tabular}
 \end{center}
@@ -404,7 +404,7 @@ De los trabajos seleccionados, sólo dos mencionan un enfoque como el que se pro
 
 En la figura \ref{fig:Burble} se muestra la clasificación de los trabajos según su ámbito y su tipo (lado izquierdo), y según su ámbito y su contribución (lado derecho). La mayoría de los trabajos son propuestas (\emph{Proposal of solution}), experiencias (\emph{Experience papers}), validaciones (\emph{Validation research}) y evaluaciones de la investigación (\emph{Evaluation research}), mientras que trabajos trabajos típicos de un tema de investigación de cierta madurez como los de opinión (\emph{Opinion papers}) y los filosóficos (\emph{Philosophical papers}) casi no hay. %Ésto junto con el hecho de haber hallado pocos trabajos confirma el poco tratamiento de este tema en la investigación. 
 
-El tipo de contribución está más distribuido. Las contribuciones del tipo proceso (\emph{Process}) y modelo (\emph{Model}) son las que se dan con más frecuencia: la primera con cuestionarios (\emph{Questionnarie}), evaluación del profesor (\emph{Teacher assessment}) y autoevaluaciones o evaluaciones entre compañeros (\emph{Peer and self-assessment}), mientras que la segunda se da con más frecuencia con cuestionarios y evaluaciones del profesor. 
+El tipo de contribución está más distribuido. Las contribuciones del tipo proceso (\emph{Process}), modelo (\emph{Model}) y herramienta (\emph{Tool}) son las que se dan con más frecuencia: la primera con evaluación del profesor (\emph{Teacher assessment}) y autoevaluaciones o evaluaciones entre compañeros (\emph{Peer and self-assessment}), mientras que la segunda y la tercera se dan con más frecuencia con evaluaciones del profesor. Cabe destacar que en esta figura si hay un trabajo que utiliza dos tipos de contribución, por ejemplo, evaluaciones del profesor y evaluaciones entre iguales o autoevaluación, se contará una vez para cada tipo.
 
 \pagestyle{empty}
 \begin{landscape}
@@ -648,6 +648,8 @@ En la tabla~\ref{tab:MetodosProfesor} puede ver los instrumentos y experiencias 
     \hline
     \cite{serrano2013hiperion} & Actividades sin determinar  & Trabajo en herramientas del EVA \\
     \hline
+    \cite{starcic2008sustaining} & Actividades sin determinar  & Trabajo en herramientas del EVA \\
+    \hline
     \cite{vizcarro2013assessment} & Cuestionario  & Trabajo en herramientas del EVA \\
     \hline
     \cite{rashid2008engineering} & Rúbrica & Implementación modelo matemático itinerario aprendizaje \\
@@ -772,9 +774,29 @@ En \cite{guenaga2013serious} se utilizan los juegos serios para el desarrollo de
 
 
 
-En \cite{fidalgo:2015} también abordan la evaluación de la competencia de \emph{trabajo en equipo}. Pero en este caso se hace desde un enfoque completamente diferente. En este trabajo se propone utilizar indicadores basados en la interacción entre los agentes que intervienen en el proceso de aprendizaje: Mediante los mensajes escritos en el foro se mide la interacción estudiante-estudiante activo, mientras que mediante las lecturas en el foro se mide las interacciones estudiante-estudiante pasivo. En este trabajo los autores demuestran cómo estos indicadores están relacionados con el rendimiento trabajando en equipo de los estudiante. Además, cómo la obtención de estos indicadores mediante los mecanismos de un entorno virtual es un trabajo tedioso y lento, se desarrolló en este mismo trabajo el software \emph{LA system (Learning Analytics system)}.
+%En \cite{fidalgo:2015} también abordan la evaluación de la competencia de \emph{trabajo en equipo}. Pero en este caso se hace desde un enfoque completamente diferente. En este trabajo se propone utilizar indicadores basados en la interacción entre los agentes que intervienen en el proceso de aprendizaje: Mediante los mensajes escritos en el foro se mide la interacción estudiante-estudiante activo, mientras que mediante las lecturas en el foro se mide las interacciones estudiante-estudiante pasivo. En este trabajo los autores demuestran cómo estos indicadores están relacionados con el rendimiento trabajando en equipo de los estudiante. Además, cómo la obtención de estos indicadores mediante los mecanismos de un entorno virtual es un trabajo tedioso y lento, se desarrolló en este mismo trabajo el software \emph{LA system (Learning Analytics system)}.
 
-En~\cite{rayon2014web} se propone la evaluación de varias competencias genéricas mediante indicadores obtenidos del análisis del proceso de aprendizaje. Para ello utilizan una plataforma web llamada LACAMOLC (\emph{Learning Analytics for Competence Assessment of MObile Learning Contexts}), un panel que da soporte a los procesos de aprendizaje y evaluación proporcionando una perspectiva visual del análisis del aprendizaje mediante la recolección de datos sociales y de uso desde diferentes entornos de aprendizaje como Moodle, Google Apps para la educación y MediaWiki. Mediante LACAMOLC el profesor centraliza todos los indicadores para la evaluación de competencias obteniendo una información cuantitativa y visual. Mediante el número de accesos al foro de Moodle o mediante el número de contribuciones en el foro, se evalúan competencias como la \emph{comunicación interpersonal} o las \emph{habilidades de escritura}. También se utilizan indicadores obtenidos de documentos Google (\emph{Google Docs}).
+%En~\cite{rayon2014web} se propone la evaluación de varias competencias genéricas mediante indicadores obtenidos del análisis del proceso de aprendizaje. Para ello utilizan una plataforma web llamada LACAMOLC (\emph{Learning Analytics for Competence Assessment of MObile Learning Contexts}), un panel que da soporte a los procesos de aprendizaje y evaluación proporcionando una perspectiva visual del análisis del aprendizaje mediante la recolección de datos sociales y de uso desde diferentes entornos de aprendizaje como Moodle, Google Apps para la educación y MediaWiki. Mediante LACAMOLC el profesor centraliza todos los indicadores para la evaluación de competencias obteniendo una información cuantitativa y visual. Mediante el número de accesos al foro de Moodle o mediante el número de contribuciones en el foro, se evalúan competencias como la \emph{comunicación interpersonal} o las \emph{habilidades de escritura}. También se utilizan indicadores obtenidos de documentos Google (\emph{Google Docs}).
+
+El primer trabajo que encontramos en esta parcela es “A web platform for the assessment of competences in Mobile Learning Contexts” ~\cite{rayon2014web}. En él utilizan LACAMOLC, una plataforma web que aporta información visual e informes con indicadores de competencias genéricas de los estudiantes a partir de los registros de actividad. LACAMOLC está implementado sobre Pentaho. Pentaho es una herramienta de análisis de negocio que recoge datos de las bases de datos de los diferentes orígenes, y que mapeará estos datos con los indicadores de las competencias genéricas. Las competencias que se evalúan y los indicadores que se utilizan son:
+
+\begin{itemize}
+\item \emph{Gestión del tiempo}. Indicador: Cumplimiento de la planificación, es decir, número de acciones que se han hecho a tiempo con respecto a la planificación fijada en una hoja de cálculo de Google.
+\item \emph{Comunicación interpersonal}. Indicador: Escuchar a los demás, es decir, número de veces que los estudiantes accedieron a las discusiones del foro de Moodle.
+\item \emph{Comunicación interpersonal}. Indicador: Expresar sus ideas, es decir, intervenciones en el foro de Moodle y comentarios en el documento Google.
+\item \emph{Habilidades de escritura}. Indicador: Expresar sus ideas, es decir, número de veces que el cada estudiante intervino en los foros de Moodle dividido por el número de veces que accedió.
+\item \emph{Habilidades de escritura}. Indicador: Expresar sus ideas con claridad y precisión, es decir, número de total de palabras que cada estudiante escribió dividido por el número de veces que intervino.
+\item \emph{Trabajo en equipo}. Indicador: Participación activa, es decir, tiempo total que duran las discusiones divididos por el número de sesiones.
+\item \emph{Pensamiento analítico}. Indicador: Respaldo de ideas de otros, es decir, número total de post que un estudiante ha leído dividido entre el número de veces que intervino.
+\item \emph{Pensamiento analítico}. Indicador: identificación de errores o falta de coherencia en sus propias ideas, es decir, número de veces que un estudiante releyó sus comentarios.
+\end{itemize}
+
+El segundo trabajo que tenemos es “Using Learning Analytics to improve teamwork assessment”~\cite{fidalgo:2015}. En este trabajo se utiliza el método CTMTC (\emph{Comprehensive Training Model of the Teamwork Competence}), un método que integra herramientas que están presentes en diferentes entornos de aprendizaje virtual y que facilita el registro de la interacción de los estudiantes y por tanto un acceso más sencillo a las evidencias del trabajo en equipo. El registro de esta interacción en el foro era una tarea tediosa para ser realizada a mano, por lo que implementaron el \emph{LA system}. \emph{LA system} se implementa como un servicio web en Moodle, de forma que la información sea accesible a través de internet con mensajes basados en XML. Esta información después es consumida por un cliente que proporciona una visión apropiada de los datos. Los indicadores utilizados son:
+
+\begin{itemize}
+\item Mensajes escritos en foro: interacción estudiante-estudiante activo.
+\item Mensajes leídos en el foro:  interacciones estudiante-estudiante pasivo.
+\end{itemize}
 
 \pagestyle{empty}
 \begin{landscape}
@@ -786,19 +808,19 @@ En~\cite{rayon2014web} se propone la evaluación de varias competencias genéric
     \hline 
     \cite{yang2014fine} & A Fine-Grained Outcome-Based Learning Path Model & proposal of solution & model & Teacher assessment \\
     \hline
-    \cite{rayon2014web} & A web platform for the assessment of competences in Mobile Learning Contexts & validation research & framework & Learning analytics \\
+    \cite{rayon2014web} & A web platform for the assessment of competences in Mobile Learning Contexts & validation research & framework & Automated assessment tool \\
     \hline
     \cite{martin2013acquired} & Acquired Skills With The Implementation Of New Evaluation Methods At University Rey Juan Carlos & experience paper & model & Teacher assessment \\
     \hline
     \cite{lacuesta2009active} & Active learning through problem based learning methodology in engineering education & experience paper & process & Teacher assessment \\
     \hline
-    \cite{benlloch2007adapting} & Adapting teaching and assessment strategies to enhance competence-based learning in the framework of the european convergence process & proposal of solution & process & Teacher assessment / Questionnarie \\
+    \cite{benlloch2007adapting} & Adapting teaching and assessment strategies to enhance competence-based learning in the framework of the european convergence process & proposal of solution & process & Teacher assessment \\
     \hline
-    \cite{aziz2007appraisal} & Appraisal of Course Learning Outcomes using Rasch Measurement: A Case Study in Information Technology Education & proposal of solution & model & Questionnarie / Teacher assessment \\
+    \cite{aziz2007appraisal} & Appraisal of Course Learning Outcomes using Rasch Measurement: A Case Study in Information Technology Education & proposal of solution & model & Teacher assessment \\
     \hline
     \cite{sevilla2012assessment} & Assessment of competences in designing online preparatory materials for the Cambridge First Certificate in English examination & evaluation research & technique & Peer and self-assessment / Teacher assessment \\
     \hline
-    \cite{vizcarro2013assessment} & Assessment of problem solving in computing studies & experience paper & process & Questionnarie \\
+    \cite{vizcarro2013assessment} & Assessment of problem solving in computing studies & experience paper & process & Teacher assessment \\
     \hline
     \cite{achcaoucaou2014competence} & Competence Assessment in Higher Education: A Dynamic Approach & proposal of solution & tool & Peer and self-assessment \\
     \hline
@@ -806,15 +828,15 @@ En~\cite{rayon2014web} se propone la evaluación de varias competencias genéric
     \hline
     \cite{ward2011developing} & Developing entrepreneurial accounting and finance competency using the ELLEIEC Virtual Centre for Enterprise & experience paper & tool & Teacher assessment \\
     \hline
-    \cite{ficapal2015learning} & e-Learning and Team-based Learning. Practical Experience in Virtual Teams & experience paper & framework & Peer and self-assessment / Questionnarie \\
+    \cite{ficapal2015learning} & e-Learning and Team-based Learning. Practical Experience in Virtual Teams & experience paper & framework & Peer and self-assessment \\
     \hline
-    \cite{rashid2008engineering} & Engineering Students Performance Evaluation of Generic Skills Measurement: ESPEGS Model & validation research & model & Questionnarie / Teacher assessment \\
+    \cite{rashid2008engineering} & Engineering Students Performance Evaluation of Generic Skills Measurement: ESPEGS Model & validation research & model & Teacher assessment \\
     \hline
     \cite{rodriguez2010portfolio} & e-Portfolio: A tool to assess university students' skills & evaluation research & tool & Teacher assessment \\
     \hline
-    \cite{andre2011formal} & Formal model for assigning human resources to teams in software projects & validation research & model & Questionnarie \\
+    \cite{andre2011formal} & Formal model for assigning human resources to teams in software projects & validation research & model & Automated assessment tool \\
     \hline
-    \cite{bedek2011behavioral} & From Behavioral Indicators to Contextualized Competence Assessment & proposal of solution & framework & Teacher assessment \\
+    \cite{bedek2011behavioral} & From Behavioral Indicators to Contextualized Competence Assessment & proposal of solution & framework & Automated assessment tool \\
     \hline
     \cite{oliver2013graduate} & Graduate attributes as a focus for institution-wide curriculum renewal: innovations and challenges & opinion paper & model & Peer and self-assessment \\
     \hline
@@ -822,7 +844,7 @@ En~\cite{rayon2014web} se propone la evaluación de varias competencias genéric
     \hline
     \cite{chang2009international} & International creative tension study of university students in South Korea and Finland & evaluation research & tool & Peer and self-assessment \\
     \hline
-    \cite{piedra2010measuring} & Measuring collaboration and creativity skills through rubrics: Experience from UTPL collaborative social networks course & evaluation research & process & Peer and self-assessment \\
+    \cite{piedra2010measuring} & Measuring collaboration and creativity skills through rubrics: Experience from UTPL collaborative social networks course & evaluation research & process & Peer and self-assessment / Teacher assessment \\
     \hline
     \cite{lasa2013problem} & Problem Based Learning Implementation In The Degree Of Human Nutrition And Dietetics & experience paper & technique & Peer and self-assessment / Teacher assessment \\
     \hline
@@ -830,19 +852,19 @@ En~\cite{rayon2014web} se propone la evaluación de varias competencias genéric
     \hline
     \cite{masip2013self} & Self-video recording for the integration and assessment of generic competencies & experience paper & technique & Peer and self-assessment \\
     \hline
-    \cite{guenaga2013serious} & Serious Games for the Development of Employment Oriented Competences & validation research & tool & Teacher assessment \\
+    \cite{guenaga2013serious} & Serious Games for the Development of Employment Oriented Competences & validation research & tool & Automated assessment tool \\
     \hline
-    \cite{ruizacarate2013soft} & Soft Skills: A Comparative Analysis Between Online and Classroom Teaching & experience paper & process & Questionnarie \\
+    \cite{ruizacarate2013soft} & Soft Skills: A Comparative Analysis Between Online and Classroom Teaching & experience paper & process & Peer and self-assessment \\
     \hline
-    \cite{starcic2008sustaining} & Sustaining Teacher's Professional Development and Training through Web-Based Communities of Practice & evaluation research & tool & Peer and self-assessment \\
+    \cite{starcic2008sustaining} & Sustaining Teacher's Professional Development and Training through Web-Based Communities of Practice & evaluation research & tool & Teacher assessment \\
     \hline
     \cite{renau2010teaching} & Teaching And Learning Through Projects Using The ICT: Practice Of The English Writing Through Business Documents & experience paper & process & Peer and self-assessment \\
     \hline
-    \cite{martinez2014teamwork} & Teamwork competence and academic motivation in computer science engineering studies & validation research & process & Questionnarie \\
+    \cite{martinez2014teamwork} & Teamwork competence and academic motivation in computer science engineering studies & validation research & process & Peer and self-assessment \\
     \hline
     \cite{carreras2013promotion} & The promotion and assessment of generic skills from interdisciplinary teaching teams & experience paper & process & Peer and self-assessment / Teacher assessment \\
     \hline
-    \cite{fidalgo:2015} & Using Learning Analytics to improve teamwork assessment & proposal of solution & technique & Learning analytics \\
+    \cite{fidalgo:2015} & Using Learning Analytics to improve teamwork assessment & proposal of solution & technique & Automated assessment tool \\
     \hline
 \caption{Distribución de publicaciones por tratamiento del problema}
 \label{tab:ListadoTrabajos}
@@ -858,9 +880,9 @@ En base al estudio mostrado las respuestas a las preguntas de investigación son
 \bigskip
 \textbf{Q1. ¿Qué competencias se han evaluado de forma automática o asistida por ordenador a partir de la actividad de los estudiantes en los entornos virtuales?}
 
-Las competencias que se han evaluado han sido prácticamente todas. Aunque las que más se han evaluado son la \emph{comunicación} (21 trabajos), \emph{trabajo en equipo} (19 trabajos) y \emph{análisis} (12 trabajos). Puede ver el resumen completo de número de trabajos por competencia en el cuadro~\ref{tab:TrabajosCompetencia}.
+En esta selección de trabajos se han encontrado evaluaciones para todas las competencias que fueron definidas en la tabla~\ref{tab:CompetenciasGenericas}. Aunque las que más se han evaluado son la \emph{comunicación} (14 trabajos), \emph{trabajo en equipo} (13 trabajos) y \emph{resolución de problemas} (7 trabajos). El resumen completo de número de trabajos por competencia puede verse en la tabla~\ref{tab:TrabajosCompetencia}.
 
-Estos datos se pueden contrastar con los de la revisión de la literatura mostrada en \cite{strijbos2015criteria}, donde se analizan las competencias genéricas más frecuentemente evaluadas. En este caso repiten posición la competencia de la \emph{comunicación} y del \emph{análisis}, primera y tercera respectivamente. Pero la competencia de \emph{trabajo en equipo} pasa a sexto lugar. En este caso se hallaron más artículos para todas las competencias, ya que no se descartaron por no ser procesos soportados tecnológicamente. 
+Estos datos se pueden contrastar con los de la revisión de la literatura mostrada en \cite{strijbos2015criteria}, donde se analizan las competencias genéricas más frecuentemente evaluadas. En este caso repite posición la competencia de la \emph{comunicación}. La competencia de \emph{resolución de problemas} ocupa la cuarta posición, mientras que la de \emph{trabajo en equipo} pasa a sexto lugar. En este caso se hallaron más artículos para todas las competencias, ya que no se descartaron por no ser procesos soportados tecnológicamente. 
 
 % , siendo la competencia de \emph{procesamiento de la información} es la que ocupa la segunda plaza
 
@@ -871,33 +893,33 @@ Estos datos se pueden contrastar con los de la revisión de la literatura mostra
     COMPETENCIA & TRABAJOS\\
     \hline
     \hline
-    Análisis & 12\\
+    Análisis & 4\\
     \hline
-    Aprendizaje permanente & 2\\
+    Aprendizaje permanente & 3\\
     \hline
-    Comunicación & 21\\
+    Comunicación & 14\\
     \hline
-    Creatividad & 5\\
+    Creatividad & 3\\
     \hline
     Cultural & 1\\
     \hline
-    Emprendimiento & 6\\
+    Emprendimiento & 5\\
     \hline
     Gestión de proyectos & 2\\
     \hline
-    Habilidades interpersonales & 5\\
+    Habilidades interpersonales & 3\\
     \hline
-    Investigación & 3\\
+    Investigación & 2\\
     \hline
-    Liderazgo & 5\\
+    Liderazgo & 2\\
     \hline
-    Pensamiento crítico & 2\\
+    Pensamiento crítico & 4\\
     \hline
     Planificación y gestión del tiempo & 3\\
     \hline
-    Resolución de problemas & 10\\
+    Resolución de problemas & 7\\
     \hline
-    Responsabilidad & 8\\
+    Responsabilidad & 3\\
     \hline 
     Segundo idioma & 3\\
     \hline
@@ -907,7 +929,7 @@ Estos datos se pueden contrastar con los de la revisión de la literatura mostra
     \hline
     Trabajo autónomo & 2\\
     \hline
-    Trabajo en equipo & 19\\
+    Trabajo en equipo & 13\\
     \hline
   \end{tabular}
 \end{center}
@@ -918,45 +940,70 @@ Estos datos se pueden contrastar con los de la revisión de la literatura mostra
 \bigskip
 \textbf{Q2. ¿Qué métodos se utilizan para evaluar competencias genéricas mediante el uso de entornos virtuales?}
 
-\begin{itemize}
-\item Evaluación entre iguales y autoevaluación: mediante rúbricas o instrucciones del profesor son los propios estudiantes los que evalúan a sus compañeros.
-\item Evaluación del profesor: mediante rúbricas, exámenes, pruebas orales o a su propio criterio es el profesor el que evalúa las competencias de los estudiantes.
-\item Cuestionarios: mediante el uso de tests de personalidad compuestos de preguntas abiertas y cerradas se evalúan algunas competencias genéricas.
-\item Evaluación asistida por ordenador: mediante el uso de juegos serios o el análisis de la interacción de los estudiantes con los entornos de aprendizaje se evalúan las competencias genéricas de los estudiantes.
-\end{itemize}
+Se han encontrado dos grupos de trabajo, por un lado, aquellos en los que el entorno virtual asiste al usuario en la evaluación de competencias genéricas, y por el otro, aquellos en los que el entorno virtual realiza la evaluación automáticamente. Dentro del primer grupo estos trabajos se dividen en dos subrgrupos dependiendo de quién realice la evaluación: evaluación entre iguales o autoevaluación (cuando la evaluación la realizan los estudiantes) y evaluación del profesor.
 
-Los métodos que más se utilizan son las rúbricas electrónicas, utilizadas tanto por el profesor como por el estudiante. El problema que encontramos con estos métodos es que si el profesor se encarga de la evaluación, la carga de trabajo de éste aumenta~\cite{lacuesta2009active}. Sin embargo, si se delega en la autoevaluación o evaluación entre iguales pueden aparecer discrepancias entre las calificaciones que se auto-asignan los estudiantes y las que realmente merecen~\cite{carreras2013promotion}. 
+Estos grupos se han separado en la categorización final debido al eleveado número de trabajos que hay para cada uno de ellos. Además, las competencias que se evalúan no son las mismas con un enfoque u otro. Mientras que ambos enfoques tienen un número elevado de trabajos que evalúan las competencias de \emph{comunicación} y \emph{trabajo en equipo}, la competencia de \emph{resolución de problema} tiene una presencia mucho más significativa en trabajos en los que evalúa el profesor (5 trabajos) con respecto a trabajos que evalúan los estudiantes (1 trabajo).
 
-También se encuentra tests de personalidad para la evaluación de algunos alumnos. Estos tests están diseñados para revelar aspectos del carácter o mecanismos psicológicos de un individuo. Cuando estos tests cuentan con preguntas abiertas y cerradas, los autores indican que es necesario encontrar un equilibrio entre el esfuerzo necesario para desarrollar estas evaluaciones en grupos de muchos estudiantes y la posibilidad de no hacerlo, o hacerlo pero no tan exhaustivamente~\cite{vizcarro2013assessment}.
+La herramienta que más se utiliza tanto en la evaluación del profesor como en la evaluación entre iguales o autoevaluación es las rúbrica electrónica. El problema que encontramos es estos trabajos que utilizan rúbricas es que si el profesor se encarga de la evaluación, la carga de trabajo de éste aumenta~\cite{lacuesta2009active}. Sin embargo, si se delega en la autoevaluación o evaluación entre iguales pueden aparecer discrepancias entre las calificaciones que se auto-asignan los estudiantes y las que realmente merecen~\cite{carreras2013promotion}. 
 
-Por último nos encontramos con experiencias que utilizan indicadores a partir de los objetivos alcanzados por los estudiantes en juegos serios~\cite{djaouti2011classifying,bedek2011behavioral} y trabajos que se basan en el análisis de los procesos de aprendizaje para la evaluación de los estudiantes~\cite{rayon2014web,fidalgo:2015}.
+Dentro de la evaluación automática se seleccionaron 5 trabajos, entre los que se encuentran algunos basados en juegos serios~\cite{djaouti2011classifying,bedek2011behavioral} y otros basados en el análisis de los procesos de aprendizaje~\cite{rayon2014web,fidalgo:2015}.
+
+Puede ver las competencias genéricas evaluadas con cada método en las figuras~\ref{fig:competencias1} y~\ref{fig:competencias2} .
+
+\pagestyle{empty}
+\begin{landscape}
+\begin{figure}[H]
+  \begin{center}
+    \includegraphics[scale=0.6]{BurbujaCompetencias1.png}
+  \end{center}
+  \caption{Competencias genéricas evaluadas con cada método (1 de 2).}
+  \label{fig:competencias1}
+\end{figure}
+
+\begin{figure}[H]
+  \begin{center}
+    \includegraphics[scale=0.6]{BurbujaCompetencias2.png}
+  \end{center}
+  \caption{Competencias genéricas evaluadas con cada método (2 de 2).}
+  \label{fig:competencias2}
+\end{figure}
+
+\end{landscape}
+\pagestyle{fancy}
 
 \bigskip
 \textbf{Q3. ¿Qué técnicas se utilizan para evaluar competencias genéricas a partir de los registros de actividad de un entorno virtual?}
 
-Se han encontrado dos trabajos que se basan en este enfoque:
+Dentro de los trabajos que utilizan un método de evaluación automática nos encontramos dos que utilizan esta técnica~\cite{rayon2014web,fidalgo:2015}. 
 
-\bigskip
-El primer trabajo que encontramos en esta parcela es “A web platform for the assessment of competences in Mobile Learning Contexts” ~\cite{rayon2014web}. En él se implementa LACAMOLC, una plataforma web que aporta información visual e informes con indicadores de competencias genéricas de los estudiantes a partir de los registros de actividad. LACAMOLC está implementado sobre Pentaho. Pentaho es una herramienta de análisis de negocio que recoge datos de las bases de datos de los diferentes orígenes, y que mapeará estos datos con los indicadores de las competencias genéricas. Las competencias que se evalúan y los indicadores que se utilizan son:
+A continuación se muestra un resumen para estos trabajos en el que se muestra las técnicas empleadas, los métodos aplicados y las competencias evaluadas~\ref{tab:CompetenciasMetodosTecnicas}.
 
-\begin{itemize}
-\item \emph{Gestión del tiempo}. Indicador: Cumplimiento de la planificación, es decir, número de acciones que se han hecho a tiempo con respecto a la planificación fijada en una hoja de cálculo de Google.
-\item \emph{Comunicación interpersonal}. Indicador: Escuchar a los demás, es decir, número de veces que los estudiantes accedieron a las discusiones del foro de Moodle.
-\item \emph{Comunicación interpersonal}. Indicador: Expresar sus ideas, es decir, intervenciones en el foro de Moodle y comentarios en el documento Google.
-\item \emph{Habilidades de escritura}. Indicador: Expresar sus ideas, es decir, número de veces que el cada estudiante intervino en los foros de Moodle dividido por el número de veces que accedió.
-\item \emph{Habilidades de escritura}. Indicador: Expresar sus ideas con claridad y precisión, es decir, número de total de palabras que cada estudiante escribió dividido por el número de veces que intervino.
-\item \emph{Trabajo en equipo}. Indicador: Participación activa, es decir, tiempo total que duran las discusiones divididos por el número de sesiones.
-\item \emph{Pensamiento analítico}. Indicador: Respaldo de ideas de otros, es decir, número total de post que un estudiante ha leído dividido entre el número de veces que intervino.
-\item \emph{Pensamiento analítico}. Indicador: identificación de errores o falta de coherencia en sus propias ideas, es decir, número de veces que un estudiante releyó sus comentarios.
-\end{itemize}
+\begin{table}
+  \begin{center}
+  \begin{tabular}{| c | c | c |}
+    \hline
+     \multirow{2}{*}{\textbf{Competencias}} & \textbf{Método} & \textbf{Técnica} \\
+    \cline{2-3}
+     & \emph{Evaluación automatizada} & \emph{Learning Analytics}\\
+    \hline
+    \hline
+    \emph{Análisis} & \multicolumn{2}{c|}{ \cite{rayon2014web} }  \\
+    \hline
+    \emph{Comunicación} & \multicolumn{2}{c|}{ \cite{rayon2014web} } \\
+    \hline
+    \emph{Habilidades interpersonales} & \multicolumn{2}{c|}{ \cite{rayon2014web} } \\
+    \hline
+    \emph{Planificación} & \multicolumn{2}{c|}{ \cite{rayon2014web} } \\
+    \hline
+    \emph{Trabajo en equipo} & \multicolumn{2}{c|}{ \cite{rayon2014web,fidalgo:2015} } \\
+    \hline
+  \end{tabular}
+\end{center}
+\caption{Competetencias evaluadas, métodos aplicados y técnicas seguidas para evaluar competencias a partir de los registros de actividad de los entornos de aprendizaje}
+\label{tab:CompetenciasMetodosTecnicas}
+\end{table}
 
-\bigskip
-El segundo trabajo que tenemos es “Using Learning Analytics to improve teamwork assessment”~\cite{fidalgo:2015}. En este trabajo se utiliza el método CTMTC (\emph{Comprehensive Training Model of the Teamwork Competence}), un método que integra herramientas que están presentes en diferentes entornos de aprendizaje virtual y que facilita el registro de la interacción de los estudiantes y por tanto un acceso más sencillo a las evidencias del trabajo en equipo. El registro de esta interacción en el foro era una tarea tediosa para ser realizada a mano, por lo que implementaron el \emph{LA system}. \emph{LA system} se implementa como un servicio web en Moodle, de forma que la información sea accesible a través de internet con mensajes basados en XML. Esta información después es consumida por un cliente que proporciona una visión apropiada de los datos. Los indicadores utilizados son:
 
-\begin{itemize}
-\item Mensajes escritos en foro: interacción estudiante-estudiante activo.
-\item Mensajes leídos en el foro:  interacciones estudiante-estudiante pasivo.
-\end{itemize}
 
 \section{Conclusiones}
 
